tests/rosetta/out/Java/call-an-object-method-3.error
javac error: exit status 1
/tmp/TestMochiToJavacall-an-object-method-33828163121/001/CallAnObjectMethod3.java:28: error: cannot find symbol
    box.TellSecret();
       ^
  symbol:   method TellSecret()
  location: variable box of type Box
1 error
